--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,7 +7,7 @@ name: Docker
 
 on:
   schedule:
-    - cron: '40 3 * * *'
+    - cron: '9 3 11 1 *'
   push:
     branches: [ "main" ]
     # Publish semver tags as releases.
