--- a/template.env
+++ b/template.env
@@ -2,7 +2,7 @@ PSQL=postgresql://<user>:<password>@<host>:<port>/<db_name>
 AIRFLOW_USER=<user>
 AIRFLOW_PASSWORD=<password>
 AIRFLOW_URL=https://<host>/api/v1/
-USER_AGENT="reporting airflow_monitoring"
+USER_AGENT="team_name airflow_monitoring"
 ENVIRONMENT=local
 PSQL_SCHEMA=<optional, default is public>
 PSQL_ROLE=<optional, default is None>
